--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tirupati INN </title>
-    <script type="module" crossorigin src="/tirupatiinn.in/assets/index.js"></script>
-    <link rel="stylesheet" crossorigin href="/tirupatiinn.in/assets/index.css">
+    <script type="module" crossorigin src="assets/index.js"></script>
+    <link rel="stylesheet" crossorigin href="assets/index.css">
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root"></div>
+
   </body>
 </html>
